--- a/app/src/main/res/navigation/graph.xml
+++ b/app/src/main/res/navigation/graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/catalogFragment"
-        android:name="com.example.catalog.CatalogFragment" />
+        android:name="com.example.catalog.presentation.CatalogFragment" />
 
     <fragment
         android:id="@+id/cartFragment"
