--- a/app/src/main/res/navigation/graph.xml
+++ b/app/src/main/res/navigation/graph.xml
@@ -19,6 +19,9 @@
     <fragment
         android:id="@+id/productFragment"
         android:name="com.example.product.ProductFragment">
-        <deepLink app:uri="@string/productFragmentUri" />
     </fragment>
+
+    <action
+        android:id="@+id/openProductFragment"
+        app:destination="@id/productFragment" />
 </navigation>
