--- a/feature/product/src/main/res/layout/fragment_product.xml
+++ b/feature/product/src/main/res/layout/fragment_product.xml
@@ -10,10 +10,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="170dp"
-        android:layout_marginTop="14dp"
         android:layout_marginEnd="183dp"
-        android:text="Product"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Product" />
 </androidx.constraintlayout.widget.ConstraintLayout>
