--- a/app/src/main/res/navigation/graph.xml
+++ b/app/src/main/res/navigation/graph.xml
@@ -10,7 +10,7 @@
 
     <fragment
         android:id="@+id/cartFragment"
-        android:name="com.example.cart.CartFragment" />
+        android:name="com.example.cart.presentation.CartFragment" />
 
     <fragment
         android:id="@+id/profileFragment"
@@ -18,7 +18,7 @@
 
     <fragment
         android:id="@+id/productFragment"
-        android:name="com.example.product.ProductFragment">
+        android:name="com.example.product.presentation.ProductFragment">
     </fragment>
 
     <action
